# bino

./: .directory  .gitignore  CBino.kdev4  CMakeLists.txt  nvstusb.fw_3dv2
.kdev4/: CBino.kdev4
cmake/: options.cmake  showoptions.cmake
cmake/macros/: FindFFMPEG.cmake  FindLIRCClient.cmake  FindOpenAL.cmake  FindQt4.cmake  Findlibusb-1.0.cmake
cmake/platform/unix/: settings.cmake
src/: CMakeLists.txt  Makefile.am  gui.cpp  media_data.cpp  media_data.h  video_output.cpp  video_output_qt.cpp  video_output_qt.h
src/bino/: CMakeLists.txt  config.h  video_output_color.fs.glsl.h  video_output_qt.cpp  video_output_render.fs.glsl.h
src/bino/.deps/: audio_output.Po  color_matrix.Po  command_file.Po  dispatch.Po  gui-moc.Po  gui.Po  lib_versions.Po  main.Po  media_data.Po  media_input.Po  media_object.Po  player.Po  qt_resources-rcc.Po  subtitle_renderer.Po  video_output.Po  video_output_qt-moc.Po  video_output_qt.Po
src/bino/base/: Makefile
src/bino/base/.deps/: dbg.Po  exc.Po  msg.Po  opt.Po  s11n.Po  str.Po  thread.Po  timer.Po
src/bino/mocs/: gui.moc  video_output_qt.moc
src/doc/: Makefile  bino.info  version.texi
src/lib/: Makefile  nvstusb.c  nvstusb.h  usb.h
src/pkg/macosx/: Info.plist
src/po/: Makefile  POTFILES  bg.gmo  bg.po  bino.pot  de.gmo  de.po  fr.gmo  fr.po  ru.gmo  ru.po  zh_cn.gmo  zh_cn.po
src/shared/: CMakeLists.txt
src/shared/nvlib/: CMakeLists.txt  nvstusb.c  usb_libusb.c
